# mustard-cpp

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  plan.md
.github/agents/: annotation.agent.md  data-loader.agent.md  test-writer.agent.md  viewer.agent.md
.github/instructions/: cmake-conventions.instructions.md  cpp-conventions.instructions.md  test-conventions.instructions.md
.github/prompts/: add-filter-callback.prompt.md  generate-loader-tests.prompt.md  review-binary-decode.prompt.md
.github/skills/add-annotation-type/: SKILL.md
.github/skills/add-data-format/: SKILL.md
.github/skills/add-data-format/assets/: DataLoader.template.h
.github/skills/add-viewer-type/: SKILL.md
cmake/: FetchDependencies.cmake
data_samples/prophesee/: left.raw
data_samples/scarf2/: timestamps.txt
docs/: appimage-release.md
include/mustard/annotation/: Annotation.h  AnnotationStore.h  BoundingBox.h  EyeTracking.h
include/mustard/app/: App.h
include/mustard/core/: TimeController.h
include/mustard/data/: ChunkCache.h  DVSEvent.h  DataChunk.h  DataLoader.h  DataStream.h
include/mustard/data/events/: DVSEventStream.h  IITDatalogLoader.h  IITDatalogStream.h  PropheseeRawLoader.h  PropheseeRawStream.h
include/mustard/ui/: DVSViewerPanel.h  ImageListPanel.h  RGBVideoPanel.h  ViewerPanel.h
packaging/: README.md
packaging/appimage/: mustard.desktop
packaging/docker/: README.md  ubuntu20.Dockerfile  ubuntu22.Dockerfile
packaging/scripts/: bundle_mustard.sh  bundle_windows.ps1  make_appimage.sh
scripts/: bundle_mustard.sh  make_appimage.sh
src/annotation/: AnnotationStore.cpp  BoundingBox.cpp  EyeTracking.cpp
src/app/: App.cpp  main.cpp
src/core/: TimeController.cpp
src/data/events/: IITDatalogLoader.cpp  IITDatalogStream.cpp  PropheseeRawLoader.cpp  PropheseeRawStream.cpp
src/ui/: DVSViewerPanel.cpp  ImageListPanel.cpp  RGBVideoPanel.cpp  ViewerPanel.cpp
tests/: CMakeLists.txt  test_annotation_store.cpp  test_callback_pipeline.cpp  test_chunk_cache.cpp  test_dvsviewer_panel.cpp  test_iitdatalog_integration.cpp  test_iitdatalog_loader.cpp  test_prophesee_raw_loader.cpp
